--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,6 +45,9 @@ android {
 repositories {
     google()
     mavenCentral()
+    flatDir {
+        dirs '../../android/app/libs'
+    }
 }
 
 
@@ -52,6 +55,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
+    implementation(name: 'heresdk-navigate-android-4.24.3.0.237319', ext: 'aar')
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
