--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,7 +46,7 @@ repositories {
     google()
     mavenCentral()
     flatDir {
-        dirs '../../android/app/libs'
+        dirs 'libs'
     }
 }
 
